# routes/route.go
@@ -106,6 +106,7 @@ func New(db *gorm.DB, echoSwagger echo.HandlerFunc) *echo.Echo {
 	v1 := e.Group("/v1")
 	v1.POST("/login", authCtrl.Login)
 	v1.POST("/signup", authCtrl.SignUp)
+	v1.POST("/auth/refresh", authCtrl.RefreshToken)
 
 	// Roles
 	role := v1.Group("/roles")
